backgrounds correctly fade out for debate side. Corrected animation ids that was causing background to jump

--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -33,8 +33,6 @@ svg {
    font-weight: bold;
    color: white;
    background: #121212;
-   opacity: .5;
-   transition: opacity 300ms ease-in-out;
    grid-column: 1 / 7;
    grid-row: 2 / span 1;
    z-index: 2;
@@ -45,8 +43,24 @@ svg {
    transform: translateX(75%);
 }
 
-#debate:hover {
+.titlesvg {
+   opacity: .5;
+   transition: opacity 500ms ease-in-out;
+}
+
+#debate:hover .titlesvg {
    opacity: 1;
+   transition: opacity 1000ms ease-in-out;
+}
+
+.backgroundsvg {
+   opacity: .5;
+   transition: visibility 1000ms linear, opacity 1000ms ease-in-out;
+}
+
+#debate:hover .backgroundsvg {
+   opacity: 0;
+   visibility: hidden;
 }
 
 #dev {
